✨ feat(auth): mejorar la autenticación y la gestión de usuarios
- 【AuthController】
  - Eliminar la confirmación de contraseña del registro ya que no es necesaria.
  - Modificar la lógica para recordar la sesión del usuario para que la cookie se cree correctamente.
- 【Users】
  - Agregar el campo `username` a la tabla de usuarios.
- 【UsersSedeer】
  - Seeder para la creación de usuarios por defecto.
- 【UserMetaModel】
  - Agregar validación de tipos en la función `saveRememberToken`.
- 【main】
  - Se actualizaron las vistas de `styles` y `scripts`.
- 【login】
  - Se agregaron validaciones al formulario de login.
  - Se implementó el botón de carga mientras se realiza la petición.
- 【input】
  - Se agregaron estilos para el icono de carga.
- 【output】
  - Se agregaron estilos para el icono de carga y se modificaron estilos existentes.
- 【notify】
  - Se actualizaron los textos por defecto de las notificaciones.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
     "tailwindcss": "^4.1.4"
+  },
+  "scripts": {
+    "dev:css": "npx @tailwindcss/cli -i ./assets/css/input.css -o ./assets/css/output.css --watch"
   }
 }
